Add new classes and configuration for database integration
- Created DatabaseUtil class for database operations
- Added new model classes: GhostNet and Person
- Established enums: GhostNetStatus and PersonType for status and type management
- Set up persistence.xml for Derby database connection via JPA

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
         <title>Ghost Net Fishing</title>
     </h:head>
     <h:body>
-        <h:outputText value="Hallo World!"></h:outputText>
+        <h:outputText value="Hallo King!"></h:outputText>
 
     </h:body>
 
