Completed CRUD operations for Ghost-net including create, show, update, and delete functionalities.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,11 +6,13 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Ghost Net Fishing</title>
+        <title>Geisternetzte Verwaltung</title>
     </h:head>
     <h:body>
-        <h:outputText value="Hallo King!"></h:outputText>
-
+        <h1>Willkommen bei der Geisternetze Verwaltung</h1>
+        <h:link value="Geisternetz melden" outcome="/addGhostNet.xhtml"/>
+        <h:link value="Geisternetz anzeigen" outcome="/listGhostNets.xhtml"/>
+<!--        <h:link value="Person hinzufügen" outcome="/addPerson.xhtml"/>-->
     </h:body>
 
 </html>
