Refactor: Update method names and logic in GhostNetController and add tests
- Renamed method CheckFilter to toggleSplitButton in GhostNetController.
- Moved logic from getStatusInGerman method in GhostNetController to the GhostNetStatus Enum by adding a new final field germanStatus.
- Added test methods to GhostNetControllerTest class.
- Added JavaDoc comments for better documentation.

--- a/src/main/webapp/listGhostNets.xhtml
+++ b/src/main/webapp/listGhostNets.xhtml
@@ -52,7 +52,7 @@
                             <f:selectItems value="#{ghostNetController.netStatuses}" var="status"
                                            itemLabel="${ghostNetController.getStatusInGerman(status)}"
                                            noSelectionOption="true"/>
-                            <p:ajax event="change" listener="#{ghostNetController.checkFilter}"
+                            <p:ajax event="change" listener="#{ghostNetController.toggleSplitButton}"
                                     update=":mainForm:netTable"/>
                         </p:selectOneMenu>
                     </f:facet>
