feat: Add service layer and password encryption, update tests and documentation
- Added a service layer between controller and DAO classes.
- Implemented password encryption for login functionality.
- Saved encrypted passwords in the database using Spring Security (BCrypt).
- Added JUnit tests for the new classes.
- Updated existing JUnit tests to reflect new changes.
- Added JavaDoc comments for the new classes.
- Updated JavaDoc comments for the modified classes and methods.

--- a/src/main/webapp/addGhostNet.xhtml
+++ b/src/main/webapp/addGhostNet.xhtml
@@ -31,8 +31,8 @@
                                      required="true"
                                      requiredMessage="Breitengrad ist erforderlich." styleClass="form__input"
                                      validator="rangeValidator">
-                            <f:attribute name="minValue" value="-90.0000"/>
-                            <f:attribute name="maxValue" value="90.0000"/>
+                            <f:attribute name="minValue" value="#{ghostNetController.MIN_LATITUDE}"/>
+                            <f:attribute name="maxValue" value="#{ghostNetController.MAX_LATITUDE}"/>
                             <p:keyFilter mask="num"/>
                         </p:inputText>
                     </div>
@@ -44,8 +44,8 @@
                                      required="true"
                                      requiredMessage="Längengrad ist erforderlich." styleClass="form__input"
                                      validator="rangeValidator">
-                            <f:attribute name="minValue" value="-180.0000"/>
-                            <f:attribute name="maxValue" value="180.0000"/>
+                            <f:attribute name="minValue" value="#{ghostNetController.MIN_LONGITUDE}"/>
+                            <f:attribute name="maxValue" value="#{ghostNetController.MAX_LONGITUDE}"/>
                             <p:keyFilter mask="num"/>
                         </p:inputText>
                     </div>
