--- a/src/main/webapp/addPerson.xhtml
+++ b/src/main/webapp/addPerson.xhtml
@@ -33,8 +33,7 @@
                         <p:outputLabel for="name" value="Name:" styleClass="form__label"/>
                         <p:inputText id="name" value="#{personController.name}" required="true"
                                      styleClass="form__input">
-                            <f:validateLength minimum="2" maximum="100"/>
-                            <f:validateRegex pattern="^[a-zA-Z\s]+$"/>
+                            <f:validator validatorId="nameValidator"/>
                         </p:inputText>
                     </div>
                     <p:message for="name"/>
@@ -44,11 +43,20 @@
                         <p:outputLabel for="phone" value="Telefonnummer:" styleClass="form__label"/>
                         <p:inputText id="phone" value="#{personController.phoneNumber}" required="true"
                                      styleClass="form__input">
-                            <f:validateRegex pattern="^(\+49|0)[1-9][0-9]{1,14}$"
-                                             validatorMessage="Bitte geben Sie eine gültige deutsche Telefonnummer ein, die mit +49 oder 0 beginnt und 2 bis 15 Ziffern enthält."/>
+                            <f:validator validatorId="phoneNumberValidator"/>
                         </p:inputText>
                     </div>
                     <p:message for="phone"/>
+
+                    <!-- Password Label und Eingabefeld -->
+                    <div class="form__row">
+                        <p:outputLabel for="password" value="Passwort:" styleClass="form__label"/>
+                        <p:password id="password" value="#{personController.password}" required="true"
+                                    styleClass="form__input">
+                            <f:validator validatorId="passwordValidator"/>
+                        </p:password>
+                    </div>
+                    <p:message for="password"/>
 
                     <!-- Role Label und Auswahlmenü -->
                     <div class="form__row">
@@ -62,23 +70,12 @@
                     <!-- Button in einer neuen Zeile -->
                     <div class="form__row form__row--center">
                         <p:commandButton id="submit" value="Konto Erstellen" action="#{personController.register()}"
-                                         update="messages messageDialog growl" ajax="true" styleClass="form__button"/>
+                                         update="messages growl" ajax="true" styleClass="form__button"/>
                     </div>
 
                     <h:messages id="messages" globalOnly="true" layout="table"/>
                 </h:form>
 
-
-                <!-- Bestätigungsdialog -->
-                <p:confirmDialog id="messageDialog" message="#{personController.message}" widgetVar="confirmDialog">
-                    <p:commandButton value="Ja" action="#{personController.redirectToLogin}"
-                                     oncomplete="PF('confirmDialog').hide();"/>
-                    <p:commandButton value="Nein" onclick="PF('confirmDialog').hide();" type="button"/>
-                </p:confirmDialog>
-
-                <h:form>
-                    <p:commandButton id="dummy" style="display:none" oncomplete="PF('confirmDialog').show();"/>
-                </h:form>
             </div>
         </div>
     </h:body>
